exams/ckad-simulation18/manifests/setup/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: genesis
---
apiVersion: v1
kind: Namespace
metadata:
  name: origin
---
apiVersion: v1
kind: Namespace
metadata:
  name: primal
---
apiVersion: v1
kind: Namespace
metadata:
  name: ancient
---
apiVersion: v1
kind: Namespace
metadata:
  name: terra
---
apiVersion: v1
kind: Namespace
metadata:
  name: eden
---
apiVersion: v1
kind: Namespace
metadata:
  name: nexus
---
apiVersion: v1
kind: Namespace
metadata:
  name: matrix
---
apiVersion: v1
kind: Namespace
metadata:
  name: cosmos
---
apiVersion: v1
kind: Namespace
metadata:
  name: zenith
